<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:background="@drawable/button"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:maxWidth="200dp"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/itemUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:maxWidth="200dp"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/itemCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/itemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>