<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/top_bar"
        >

        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/icon"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
        <TextView
            app:layout_constraintLeft_toRightOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/aqua"
            />
        <EditText
            android:id="@+id/loginText"
            android:backgroundTint="@color/aqua"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/aqua"
            />
        <EditText
            android:id="@+id/loginPassword"
            android:inputType="textPassword"
            android:backgroundTint="@color/aqua"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/registerButton"
            android:layout_marginStart="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            />
    </LinearLayout>

    <Button
        android:id="@+id/buttonEnter"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/enter"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>